samples/_failures_safe/1761559586_fe1b5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_362c21c0.c: In function ‘main’:
./samples/SAFE/__tmp_362c21c0.c:163:9: error: expected expression at end of input
  163 |         if (
      |         ^~
./samples/SAFE/__tmp_362c21c0.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_362c21c0.c:163:9: error: expected declaration or statement at end of input
